# data_energineering

./: .gitignore  DATA_SOURCES.md  DELETE_NEXT_TIME  INSTALLATION.md  README.md  hello.py  nrel_fetch.py  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: data_refresh.yml
backend/backend/: settings.py  urls.py
backend/myapi/: urls.py  views.py
docs/: nrel_fields.docx
ev-metrics/: package-lock.json  package.json
ev-metrics/public/: index.html
ev-metrics/src/: About.js  App.js  Dashboards.js  Home.js  Navbar.js
sql/: 01_expand-ev_connector_types.sql
tableau/: evses.twb
